fix: various layout issues on small screens

--- a/projects/mtd/src/app/pages/about/about/about.component.scss
+++ b/projects/mtd/src/app/pages/about/about/about.component.scss
@@ -8,6 +8,7 @@ h1 {
   text-align: center;
   font-size: 2em;
   text-transform: uppercase;
+  margin-bottom: 1em;
 }
 
 h2 {
