--- a/projects/mtd/src/app/pages/bookmarks/bookmarks/bookmarks.component.scss
+++ b/projects/mtd/src/app/pages/bookmarks/bookmarks/bookmarks.component.scss
@@ -2,6 +2,7 @@ h1 {
   text-align: center;
   font-size: 2em;
   text-transform: uppercase;
+  margin-bottom: 1em;
 }
 
 h2 {
